Upgrade jOOQ MySQL module